# KOPP

./: .gitignore  README.md  changelog.md  main.py  pyproject.toml
.github/workflows/: linux.yml  macos.yml  windows.yml
art/: kopp_icon.icns
doc/: UI.drawio  database_desc.dbml  kopp_ui.fbp
install/: createapp.py
kopp/: __init__.py  __main__.py  bitmaps.py  createversion.py  database.py  database_model.py  frameabout.py  framegraph.py  frameinfo.py  framemain.py  framemainlist.py  framemainlist_rows.py  framerecord.py  framesettings.py  record_totals.py  time_converter.py  timeconverter.py  xlsx_exporter.py
kopp/templates/: info.html
test/: test_framemainlist.py  test_record_totals.py  test_time_converter.py  test_xlsx_exporter.py
