[project]
name = "kopp"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jinja2>=3.1.6",
    "numpy>=2.5.1",
    "openpyxl>=3.1.5",
    "peewee>=4.1.2",
    "pyinstaller>=6.21.0",
    "wxpython==4.2.5",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
