[project]
name = "kopp"
version = "1.1.0"
description = "track working time, hour balances, annual leave, vacation time"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jinja2>=3.1.6",
    "numpy>=2.5.1",
    "openpyxl>=3.1.5",
    "peewee==4.2.6",
    "pyinstaller>=6.21.0",
    "ruff==0.15.22",
    "wxpython==4.2.5",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
